third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/bug_16594.move
script {
    fun main() {
        let f = || {};
        let g = |func| func();
        g(f);
    }
}
